--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(is.imbalanced)
 export(mlim)
+importFrom(VIM,kNN)
 importFrom(h2o,as.h2o)
 importFrom(h2o,h2o.automl)
 importFrom(h2o,h2o.init)
@@ -11,6 +12,7 @@ importFrom(h2o,h2o.removeAll)
 importFrom(h2o,h2o.rm)
 importFrom(md.log,md.log)
 importFrom(missRanger,imputeUnivariate)
+importFrom(missRanger,missRanger)
 importFrom(stats,na.omit)
 importFrom(stats,setNames)
 importFrom(stats,var)
