--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ importFrom(h2o,h2o.rm)
 importFrom(md.log,md.log)
 importFrom(missRanger,imputeUnivariate)
 importFrom(missRanger,missRanger)
+importFrom(stats,median)
 importFrom(stats,na.omit)
 importFrom(stats,setNames)
 importFrom(stats,var)
