--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,7 +8,7 @@ Description: More about what it does (maybe more than one line)
     Use four spaces when indenting paragraphs within the Description.
 License: MIT + file LICENSE
 Encoding: UTF-8
-Imports: h2o, missRanger, md.log, ggplot2
+Imports: h2o, VIM, missRanger, md.log
 LazyData: true
 RoxygenNote: 7.2.1
 URL: https://github.com/haghish/mlim, https://www.sv.uio.no/psi/english/people/aca/haghish/
