--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,7 +10,10 @@ importFrom(h2o,h2o.ls)
 importFrom(h2o,h2o.predict)
 importFrom(h2o,h2o.removeAll)
 importFrom(h2o,h2o.rm)
+importFrom(h2o,h2o.shutdown)
 importFrom(md.log,md.log)
+importFrom(memuse,Sys.meminfo)
+importFrom(missForest,missForest)
 importFrom(missRanger,imputeUnivariate)
 importFrom(missRanger,missRanger)
 importFrom(stats,median)
