--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,8 +4,11 @@ Title: Extreme Missing Data Imputation With Automated Machine Learning (AutoML)
 Version: 0.0.1
 Author: E. F. Haghish
 Maintainer: E. F. Haghish <haghish@uio.no>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
+Description: Using automated machine learning, the package fine-tunes an Elastic 
+    Net (ELNET) or Gradient Boosting Machine (GBM) model for imputing the missing 
+    observations of each variable. This procedure has been implemented for the 
+    first time by mlim package and is expected to outperform other packages for 
+    imputing missing data that do not fine-tune their models. 
 License: MIT + file LICENSE
 Encoding: UTF-8
 Imports: h2o, VIM, missRanger, missForest, memuse, md.log
