--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,13 @@
 Package: mlim
 Type: Package
-Title: Missing Data Imputation with Automated Machine Learning (AutoML)
+Title: Missing Data Imputation with Automated Machine Learning
 Version: 0.0.1
 Author: E. F. Haghish
 Maintainer: E. F. Haghish <haghish@uio.no>
 Description: Using automated machine learning, the package fine-tunes an Elastic 
-    Net (ELNET) or Gradient Boosting Machine (GBM) model for imputing the missing 
+    Net or Gradient Boosting Machine model for imputing the missing 
     observations of each variable. This procedure has been implemented for the 
-    first time by mlim package and is expected to outperform other packages for 
+    first time by this package and is expected to outperform other packages for 
     imputing missing data that do not fine-tune their models. 
 License: MIT + file LICENSE
 Encoding: UTF-8
