--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,13 @@
 Package: mlim
 Type: Package
 Title: Missing Data Imputation with Automated Machine Learning
-Version: 0.0.3
-Author: E. F. Haghish
-Maintainer: E. F. Haghish <haghish@uio.no>
+Version: 0.0.1
+Authors@R: 
+    person("E. F. Haghish",
+           role = c("aut", "cre", "cph"),
+           email = "haghish@uio.no")
+Depends: 
+    R (>= 3.5.0)
 Description: Using automated machine learning, the package fine-tunes an Elastic 
     Net or Gradient Boosting Machine model for imputing the missing 
     observations of each variable. This procedure has been implemented for the 
