--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,12 +14,13 @@ importFrom(h2o,h2o.rm)
 importFrom(h2o,h2o.shutdown)
 importFrom(md.log,md.log)
 importFrom(memuse,Sys.meminfo)
-importFrom(missForest,missForest)
 importFrom(missRanger,imputeUnivariate)
 importFrom(missRanger,missRanger)
 importFrom(stats,median)
 importFrom(stats,na.omit)
 importFrom(stats,setNames)
 importFrom(stats,var)
+importFrom(utils,capture.output)
+importFrom(utils,packageVersion)
 importFrom(utils,setTxtProgressBar)
 importFrom(utils,txtProgressBar)
