--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,7 +15,7 @@ Description: Using automated machine learning, the package fine-tunes an Elastic
     imputing missing data that do not fine-tune their models. 
 License: MIT + file LICENSE
 Encoding: UTF-8
-Imports: h2o, VIM, missRanger, missForest, memuse, md.log
+Imports: h2o, VIM, missRanger, memuse, md.log
 RoxygenNote: 7.2.1
 URL: https://github.com/haghish/mlim, https://www.sv.uio.no/psi/english/people/aca/haghish/
 BugReports: https://github.com/haghish/mlim/issues
