--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: mlim
 Type: Package
 Title: Missing Data Imputation with Automated Machine Learning
-Version: 0.0.1
+Version: 0.1.0
 Authors@R: 
     person("E. F. Haghish",
            role = c("aut", "cre", "cph"),
@@ -15,7 +15,12 @@ Description: Using automated machine learning, the package fine-tunes an Elastic
     imputing missing data that do not fine-tune their models. 
 License: MIT + file LICENSE
 Encoding: UTF-8
-Imports: h2o, VIM, missRanger, memuse, md.log
+Imports:
+    h2o (>= 3.34.0.0),
+    VIM,
+    missRanger,
+    memuse,
+    md.log (>= 0.2.0)
 RoxygenNote: 7.2.1
 URL: https://github.com/haghish/mlim, https://www.sv.uio.no/psi/english/people/aca/haghish/
 BugReports: https://github.com/haghish/mlim/issues
