--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ importFrom(h2o,h2o.rm)
 importFrom(h2o,h2o.shutdown)
 importFrom(md.log,md.log)
 importFrom(memuse,Sys.meminfo)
+importFrom(mice,as.mids)
 importFrom(missRanger,imputeUnivariate)
 importFrom(missRanger,missRanger)
 importFrom(stats,median)
