--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(mlim)
 export(mlim.error)
 export(mlim.mids)
 export(mlim.na)
+importFrom(curl,curl)
 importFrom(h2o,as.h2o)
 importFrom(h2o,h2o.automl)
 importFrom(h2o,h2o.init)
