--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,8 @@ export(mlim.na)
 importFrom(curl,curl)
 importFrom(h2o,as.h2o)
 importFrom(h2o,h2o.automl)
+importFrom(h2o,h2o.clusterIsUp)
+importFrom(h2o,h2o.clusterStatus)
 importFrom(h2o,h2o.init)
 importFrom(h2o,h2o.ls)
 importFrom(h2o,h2o.predict)
