--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,9 @@ export(mlim)
 export(mlim.error)
 export(mlim.mids)
 export(mlim.na)
+export(mlim.postimpute)
+export(mlim.preimpute)
+export(mlim.summarize)
 importFrom(curl,curl)
 importFrom(h2o,as.h2o)
 importFrom(h2o,h2o.automl)
