--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -23,5 +23,6 @@ Imports:
     memuse,
     md.log (>= 0.2.0)
 RoxygenNote: 7.2.1
+LazyData: true
 URL: https://github.com/haghish/mlim, https://www.sv.uio.no/psi/english/people/aca/haghish/
 BugReports: https://github.com/haghish/mlim/issues
