--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,12 +10,12 @@ Depends:
     R (>= 3.5.0)
 Description: Using automated machine learning, the package fine-tunes an Elastic 
     Net (default) or Gradient Boosting, Random Forest, Deep Learning, Extreme Gradient Boosting,
-    or Stacked Ensemble Machine model for imputing the missing 
+    or Stacked Ensemble machine learning model for imputing the missing 
     observations of each variable. This procedure has been implemented for the 
     first time by this package and is expected to outperform other packages for 
     imputing missing data that do not fine-tune their models. The main idea is 
-    to allow the mdoel to set their own parameters for imputing each variable 
-    instead of setting fixed pre-defined paramets to impute all variables 
+    to allow the model to set its own parameters for imputing each variable 
+    instead of setting fixed predefined parameters to impute all variables 
     of the dataset.
 License: MIT + file LICENSE
 Encoding: UTF-8
