--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,11 +11,14 @@ importFrom(h2o,as.h2o)
 importFrom(h2o,h2o.automl)
 importFrom(h2o,h2o.clusterIsUp)
 importFrom(h2o,h2o.clusterStatus)
+importFrom(h2o,h2o.getId)
 importFrom(h2o,h2o.init)
+importFrom(h2o,h2o.load_frame)
 importFrom(h2o,h2o.ls)
 importFrom(h2o,h2o.predict)
 importFrom(h2o,h2o.removeAll)
 importFrom(h2o,h2o.rm)
+importFrom(h2o,h2o.save_frame)
 importFrom(h2o,h2o.shutdown)
 importFrom(md.log,md.log)
 importFrom(memuse,Sys.meminfo)
