--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,10 +2,13 @@
 
 export(mlim)
 export(mlim.error)
+export(mlim.load)
 export(mlim.mids)
 export(mlim.na)
 export(mlim.preimpute)
 export(mlim.summarize)
+importFrom(arrow,read_feather)
+importFrom(arrow,write_feather)
 importFrom(curl,curl)
 importFrom(h2o,as.h2o)
 importFrom(h2o,h2o.automl)
@@ -29,6 +32,7 @@ importFrom(stats,median)
 importFrom(stats,na.omit)
 importFrom(stats,setNames)
 importFrom(stats,var)
+importFrom(tools,file_ext)
 importFrom(utils,capture.output)
 importFrom(utils,packageVersion)
 importFrom(utils,setTxtProgressBar)
