--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ importFrom(h2o,h2o.getId)
 importFrom(h2o,h2o.init)
 importFrom(h2o,h2o.load_frame)
 importFrom(h2o,h2o.ls)
+importFrom(h2o,h2o.no_progress)
 importFrom(h2o,h2o.predict)
 importFrom(h2o,h2o.removeAll)
 importFrom(h2o,h2o.rm)
