--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ importFrom(h2o,h2o.automl)
 importFrom(h2o,h2o.clusterIsUp)
 importFrom(h2o,h2o.clusterStatus)
 importFrom(h2o,h2o.getId)
+importFrom(h2o,h2o.get_automl)
 importFrom(h2o,h2o.init)
 importFrom(h2o,h2o.load_frame)
 importFrom(h2o,h2o.ls)
