--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(mlim.error)
 export(mlim.mids)
 export(mlim.na)
 export(mlim.preimpute)
+export(mlim.shuffle)
 export(mlim.summarize)
 importFrom(curl,curl)
 importFrom(h2o,as.h2o)
@@ -29,6 +30,7 @@ importFrom(missRanger,imputeUnivariate)
 importFrom(missRanger,missRanger)
 importFrom(stats,median)
 importFrom(stats,na.omit)
+importFrom(stats,rnorm)
 importFrom(stats,setNames)
 importFrom(stats,var)
 importFrom(tools,file_ext)
